--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -169,7 +169,7 @@
   <div class="item">
     {% with build=object.builds.first %}
       {% if build %}
-        <i class="history icon"></i>
+        <i class="fad fa-history icon"></i>
         <span data-bind="with: create_popup">
           <a
             data-bind="popup: {}"
