Overhaul selected line logic and templates
Lots of improvements here:

- The UX was greatly improved by dropping link anchors and focus by
  anchor. This was due to browsers not providing great support for
  overriding this behavior. Instead select the line through data
  attributes and focus in the viewport centered.
- Clicking the line number link and opening a URL with anchor hash are
  now both the same experience.
- Temporarily remove ANSI support, as the async call was causing trouble
  focusing the right command on page load
- Previously, selected line was O(n), for all command/command lines.
  Instead, reduce this to two lookups, and a single set operation.
- Cross-viewmodel dependencies are moved to templates

Closes #30

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -162,26 +162,26 @@
 
         <table
             class="ui small very basic compact inverted selectable command table"
-            data-bind="visible: commands, foreach: commands_with_debug"
+            data-bind="visible: commands, foreach: commands"
             style="display: none;">
           <tbody>
-            <tr class="top aligned command" data-bind="visible: is_visible">
+            <tr class="top aligned command" data-bind="visible: is_visible() || $parent.show_debug()">
               <td class="collapsing">
-                <a class="ui icon left floated" data-bind="click: toggle_showing">
-                  <i class="grey fa-solid fa-angle-right icon" data-bind="class: is_showing() ? 'fa-angle-down' : 'fa-angle-right'"></i>
+                <a class="ui icon left floated" data-bind="click: toggle_expanded">
+                  <i class="grey fa-solid fa-angle-right icon" data-bind="class: is_expanded() ? 'fa-angle-down' : 'fa-angle-right'"></i>
                 </a>
               </td>
               <td>
-                <code class="ui text" data-bind="text: command, class: command_class"></code>
+                <code class="ui text" data-bind="text: command, class: command_class, click: toggle_expanded"></code>
                 <a class="ui mini inverted label" data-bind="text: run_time() + 's'"></a>
                 <a class="ui mini red label" data-bind="text: '{% trans "Exit" %}: ' + exit_code(), visible: exit_code() > 0"></a>
               </td>
             </tr>
           </tbody>
-          <tbody data-bind="visible: is_showing(), foreach: output_lines">
-            <tr data-bind="css: {'left olive marked': is_highlighted()}" class="top aligned">
+          <tbody data-bind="visible: is_expanded(), foreach: output_lines">
+            <tr data-bind="css: {'left olive marked': is_selected()}" class="top aligned">
               <td class="collapsing line number">
-                <a class="ui small grey left floated text" data-bind="attr: {id: anchor_id(), href: '#' + anchor_id(), text: line_number()};">
+                <a class="ui small grey left floated text" data-bind="attr: {href: '#' + anchor_id(), 'data-selected': is_selected()}, click: function() { $parents[1].set_selected_line($data) }">
                   <code data-bind="text: line_number()"></code>
                 </a>
               </td>
@@ -192,8 +192,8 @@
           </tbody>
         </table>
 
-        <div data-bind="visible: !is_loading()">
-          <div data-bind="visible: !finished()" class="ui active inverted mini centered inline text loader"></div>
+        <div data-bind="visible: is_polling() && !is_loading()" style="display: none;">
+          <div data-bind="visible: is_polling" class="ui active inverted mini centered inline text loader"></div>
         </div>
 
       </div>
