Fix project creation form bugs
- Missing and broken error handling not catching task inspection failure
- Old doc embedding pattern was broken and throwning an error
- Properties from previously used RemoteRepo schema were removed from
  API v2, and so this needed updated as well

Fixes #117

--- a/readthedocsext/theme/templates/projects/import_base.html
+++ b/readthedocsext/theme/templates/projects/import_base.html
@@ -61,8 +61,8 @@
 
     <div class="ui ten wide tablet four wide computer column">
       <h2 class="ui small header">{% trans "Help topics" %}</h2>
-      <div data-embed-doc-view="intro/import-guide"
-           data-bind="template: { name: 'doc-topics' }">
+      <div data-bind="using: EmbedTopicsView('intro/import-guide')">
+        <div data-bind="template: { name: 'doc-topics' }"></div>
       </div>
     </div>
   </div>
