--- a/readthedocsext/theme/templates/projects/import_form.html
+++ b/readthedocsext/theme/templates/projects/import_form.html
@@ -59,6 +59,12 @@
 
       <div class="ui active tab" data-tab="automatic">
 
+        <div class="ui error small message"
+             data-bind="visible: error"
+             style="display: none;">
+          {% trans "There was an error while syncing your remote repositories" %}
+        </div>
+
       {% if has_connected_accounts %}
         {# Search prompt and dropdown #}
         <div class="ui fluid disabled loading search" data-bind="semanticui: {search: search_config()}, css: {disabled: is_loading(), loading: is_loading()}">
@@ -84,7 +90,7 @@
             the context binding, but the attributes are observable attributes.
           {% endcomment %}
           <script type="text/html" id="remote-repo-results">
-<div data-bind="foreach: results" class="results">
+<div data-bind="foreach: remote_repos" class="results">
   <a class="result">
     <div class="image">
       <img data-bind="attr: {src: avatar_url}">
@@ -95,13 +101,16 @@
         {# Because of the search popup, a nested popup using data-content doesn't do anything here #}
         <i class="fa-duotone fa-eye-slash small icon"
            style="display: none"
-           data-bind="visible: private"></i>
+           data-bind="visible: private"
+           data-content="{% trans "Repository is private" %}"></i>
         <i class="fa-duotone fa-magic small icon"
            style="display: none"
-           data-bind="visible: admin"></i>
+           data-bind="visible: admin"
+           data-content="{% trans "Repository can be automatically configured" %}"></i>
         <i class="fa-duotone fa-download small icon"
            style="display: none"
-           data-bind="visible: project"></i>
+           data-bind="visible: has_project"
+           data-content="{% trans "Repository is already configured" %}"></i>
       </div>
       <div class="description">
         <span data-bind="text: clone_url"></span>
@@ -197,7 +206,7 @@
                           {% endblocktrans %}
                         </p>
                         <p class="ui red text" data-bind="visible: private">
-                          <a class="ui red mini basic button">Read more</a>
+                          <a class="ui red mini basic button">{% trans "Read more" %}</a>
                         </p>
                       </div>
                     </div>
@@ -233,7 +242,7 @@
                           {% endblocktrans %}
                         </p>
                         <p class="ui red text" data-bind="visible: !admin">
-                          <a class="ui red mini basic button">Read more</a>
+                          <a class="ui red mini basic button">{% trans "Read more" %}</a>
                         </p>
                       </div>
                     </div>
@@ -255,9 +264,9 @@
                           again will not affect existing projects.
                         {% endblocktrans %}
                         </p>
-                        <p data-bind="with: project">
+                        <p data-bind="foreach: matches">
                           <i class="fa-duotone fa-arrow-up-right-from-square icon"></i>
-                          <a data-bind="text: name, attr: {href: url}" target="_blank"></a>
+                          <a data-bind="text: id, attr: {href: url}" target="_blank"></a>
                         </p>
                       </div>
                     </div>
@@ -323,82 +332,3 @@
     </div>
   </div>
 {% endblock content %}
-
-{% block newcontent %}
-  <div class="ui stackable grid">
-    <div class="ui ten wide column">
-    {% include "projects/partials/remote_repo_list.html" with objects=remote_repos %}
-  </div>
-{% endblock newcontent %}
-
-{% block oldcontent %}
-  <div
-      class="ui list"
-      style="display: none;"
-      data-bind="visible: error">
-    <div
-        class="item ui message"
-        data-bind="with: error">
-
-      <span data-bind="visible: message">
-        {% trans "There was an error with your request:" %}
-        <span data-bind="text: message"></span>
-      </span>
-
-    </div>
-  </div>
-
-  {% block main_content %}
-    <div class="ui basic padded segment">
-
-      <span
-          data-bind="visible: is_syncing"
-          style="display: none;">
-        <img src="{% static 'core/img/loader.gif' %}"/>
-      </span>
-
-          <div>
-            <a data-bind="attr: {href: html_url}, text: full_name">
-            </a>
-            <span data-bind="visible: !is_locked(), text: clone_url"></span>
-            <span data-bind="visible: is_locked()">
-              {% trans "This repository requires admin access to import" %}
-            </span>
-          </div>
-
-          <div class="ui list">
-            <div
-                class="item"
-                data-bind="visible: is_locked()"
-                style="display: none;">
-              <span>
-                <span>{% trans "Locked" %}</span>
-              </span>
-            </div>
-            <div
-                class="item"
-                data-bind="visible: match() && !is_locked(), with: match"
-                style="display: none;">
-              <a
-                  data-bind="attr: {href: url}"
-                  title="{% trans "This repository has already been imported" %}">
-                <span>{% blocktrans context "verb, action to see in detail" %}"View"{% endblocktrans %}</span>
-              </a>
-            </div>
-            <div class="item" data-bind="visible: !match() && !is_locked()" style="display: none;">
-              <a
-                  href="#"
-                  data-bind="click: import_repo"
-                  >
-                <span>{% trans "Add" %}</span>
-              </a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-
-    </div>
-  {% endblock %}
-
-{% endblock oldcontent %}
