Fix commit=None bug with build detail/listing page
The error state was previously resolved, this fixes the remaining issues
with display when the commit is `None`. It removes the field from both
the listing and detail page instead of displaying `commit: None` or
similar, as this is confusing.

Fixes #29

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -56,13 +56,6 @@
               </div>
             </div>
 
-            <div class="item">
-              <i class="grey fa-duotone fa-code-branch icon"></i>
-              <div class="content" data-bind="if: !is_loading()">
-                <a data-bind="attr: {href: commit_url}"><code data-bind="text: commit_short"></code></a>
-              </div>
-            </div>
-
             {# Version type is static, so we can skip some KO code #}
             <div class="item">
               <i class="grey fa-duotone {{ build.is_external | yesno:"fa-code-merge,fa-tag" }} icon"></i>
@@ -79,6 +72,13 @@
                     </a>
                   </code>
                 {% endif %}
+              </div>
+            </div>
+
+            <div class="item" data-bind="visible: commit_short">
+              <i class="grey fa-duotone fa-code-branch icon"></i>
+              <div class="content" data-bind="if: !is_loading()">
+                <a data-bind="attr: {href: commit_url}"><code data-bind="text: commit_short"></code></a>
               </div>
             </div>
 
